# Python-Website

./: .replit  LICENSE  README.md  app.py  pyproject.toml  run.sh  sh.nix
templates/: home.html
